--- a/tipos_funcoes.css
+++ b/tipos_funcoes.css
@@ -10,7 +10,7 @@
 header{
     background-color: gray;
     height: 70px;
-    width: 100vw;
+    width: 100%;
 }
 
 /* #menu-items a{
@@ -71,6 +71,7 @@ header{
     display: flex;
     gap:20px;
     font-size: 20px;
+    transition: all ease .s;
 }
 
 .menu p{
@@ -89,13 +90,10 @@ header{
 }
 
 #menu-items{
-    display: none;
-}
-
-#hamburguer{
-    display: none;
     
 }
+
+
 
 .menu p{
     font-size: 24px;
@@ -104,6 +102,55 @@ header{
 .menu{
     height: 50px;
 }
+
+.menu #hamburguer{
+    position: absolute;
+    z-index:999;
+    width:35px;
+    height:35px;
+    display: 
+    none;
+    top:3%;
+}
+
+#hamburguer span{
+    display: block;
+    width: 35px;
+    height: 5px;
+    margin-bottom:10px;
+    background-color: white;
+    border-radius:3px;
+   transition: all ease .3s;
+}
+
+.menu .menu-check{
+    position: absolute;
+    z-index:1000;
+    width: 35px;
+    height: 35px;
+    opacity: 0;
+    cursor:pointer;
+}
+
+.menu .menu-check:checked ~ #hamburguer span{
+    background-color: gray;
+}
+
+.menu .menu-check:checked ~ #hamburguer span:nth-child(1){
+    transform-origin: 0% 0%;
+    transform: rotate(45deg) scaleX(1.25);
+}
+
+.menu .menu-check:checked ~ #hamburguer span:nth-child(2){
+    
+    opacity: 0;
+}
+
+.menu .menu-check:checked ~ #hamburguer span:nth-child(3){
+    transform-origin: 0% 100%;
+    transform: rotate(-45deg) scaleX(1.25);
+}
+
 
 body{
     background-color: aliceblue;
@@ -118,6 +165,7 @@ main{
     margin-top: 2%;
     border-radius: 10px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.315);
+    padding:5%;
 }
 
 #img-fundo img{
@@ -136,6 +184,7 @@ main{
      gap:2%;
      align-items: center;
      background: yellow;
+     flex-wrap: wrap;
  }
  
  .def-prof > p{
@@ -157,17 +206,35 @@ main{
  }
 
 @media(max-width:800px) {
-    #hamburguer{
+   .menu #hamburguer{
         display: block;
     }
 
-    #hamburguer:hover{
-        color:red;
-    }
+    
 
     .menu ul{
+        position:absolute;
+        z-index: 998;
+        left:262px;
+        top:0;
+        width: 400px;
+        height: 100vh;
+        background-color: white;
+        padding-top: 100px;
+        display: block;
+        margin-right: 400px;
         display: none;
-        
     }
+
+    .menu ul li a{
+        color: black;
+    }
+
+.menu .menu-check:checked ~ ul{
+    display: block;
+    margin-right: -400px;
+}
+
+
 
 }
