--- a/tipos_funcoes.css
+++ b/tipos_funcoes.css
@@ -185,6 +185,7 @@ main{
      align-items: center;
      background: yellow;
      flex-wrap: wrap;
+     height: 100%;
  }
  
  .def-prof > p{
@@ -197,9 +198,9 @@ main{
  .def{
      border: 1px solid rgba(255, 255, 255, 0.18);
      background-color: rgba(255, 255, 255, 0.1);
-     backdrop-filter: blur(13.5px);
+     
      border-radius:7px;
-     height: 60px;
+     height: 100%;
      box-shadow:  0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
      color:rgb(80, 76, 76);
  
